Spacing fixes

--- a/src/themes/apptheme/src/components.avatar.css
+++ b/src/themes/apptheme/src/components.avatar.css
@@ -8,7 +8,6 @@
     text-decoration: none;
     display: block;
 }
-
 @media all and (--from-medium) {
     .avatar {
         margin-top: calc(var(--base-line-height)*1.5);
@@ -17,7 +16,6 @@
         display: block;
     }
 }
-
 .avatar__img {
     width: 3.75rem;
     height: 3.75rem;
@@ -26,14 +24,13 @@
     float: left;
     margin-right: calc(var(--base-line-height)*1);
 }
-
 .avatar__name {
-    color: var(--ultra-dark);
     font-family: var(--ff-sans);
     font-size: var(--type-large);
+    text-decoration: none;
     margin-bottom: calc(var(--base-line-height)*.25);
+    color: var(--ultra-dark);
 }
-
 .avatar__position {
     font-family: var(--ff-sans);
     color: color(var(--ultra-light) blackness(50%));
